[package]
name = "advent-of-code-2019"
description = "Advent of Code 2019 Solutions"
version = "0.1.0"
authors = ["Chris Roche <github@rodaine.com>"]
edition = "2018"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
